# attune-help

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.claude/hooks/: .canonical-sha256  _state.py  spec_orient.py
.claude/plans/: path-keyed-sidecars-for-rag-v0.7.0.md  rag-roadmap-next-2026-04-18.md  shape2-validation-bug-predict-2026-04-18.md
.github/workflows/: publish.yml  rag-benchmark.yml  tests.yml
scripts/: benchmark_all_fixtures.py  differentiation_hints.yaml  generate_fixtures.py  polish_summaries.py  repolish_low_p1.py  show_low_p1_misses.py  validate_against_corpus.py
src/attune_help/: __init__.py  __main__.py  cli.py  discovery.py  engine.py  manifest.py  preamble.py  progression.py  staleness.py  storage.py  templates.py  transformers.py
src/attune_help/adapters/: __init__.py  rag.py
src/attune_help/demos/: __init__.py
src/attune_help/demos/security-audit/: concept.md  reference.md  task.md
src/attune_help/freshness/: __init__.py  symbols.py
src/attune_help/mcp/: __init__.py  handlers.py  path_validation.py  server.py  tool_schemas.py
src/attune_help/templates/: cross_links.json  summaries.json  summaries_by_path.json
src/attune_help/templates/comparisons/: auth-strategies.md  cli-vs-claude-code.md  lite-vs-full.md  workflow-vs-wizard.md
src/attune_help/templates/concepts/: audience-adaptation.md  cross-linking.md  feedback-loop.md  meta-orchestration.md  progressive-depth.md  socratic-discovery.md  sync-paradigm.md  task-api-endpoint-design.md  task-authentication-patterns.md  task-ci-cd-pipeline.md  task-code-migration.md  task-configuration-setup.md  task-cross-linking-strategy.md  task-database-migrations.md  task-debugging-sessions.md  task-dependency-management.md  task-error-handling-design.md  task-git-workflow.md  task-help-system-testing.md  task-logging-observability.md  task-package-publishing.md  task-precursor-warning-design.md  task-progressive-depth-design.md  task-socratic-discovery-patterns.md  task-template-design-patterns.md  task-template-migration.md  template-composition.md  tier-routing.md  tool-attune-hub.md  tool-bug-predict.md  tool-coach.md  tool-code-quality.md  tool-doc-gen.md  tool-fix-test.md  tool-memory-and-context.md  tool-planning.md  tool-refactor-plan.md  tool-release-prep.md  tool-security-audit.md  tool-smart-test.md  (+3 more)
src/attune_help/templates/errors/: adding-dns-resolution-to-validate-webhook-url-breaks-tests-that.md  adding-logger-before-eager-imports-triggers-e402-in-init-py.md  anthropics-built-in-prompt-caching-supersedes-custom-caching.md  any-unstaged-file-triggers-pre-commit-stash-conflicts-with-auto.md  attune-skill-names-must-not-collide-with-claude-code-built-in.md  b904-raise-x-from-e-is-not-auto-fixable-by-ruff.md  background-processes-from-previous-sessions-persist-across.md  bandit-b108-blocks-hardcoded-tmp-paths.md  baseworkflow-now-provides-self-logger.md  baseworkflow-uses-class-attributes-not-constructor-params.md  bg-var-primary-bg-opacity-10-is-invisible-in-dark-mode.md  broad-gitignore-patterns-match-nested-directories.md  bug-predict-dangerous-eval-flags-subprocess-exec.md  bugpredictionworkflow-not-bugpredictworkflow.md  changing-error-messages-breaks-tests-across-the-codebase.md  changing-user-facing-output-strings-cascades-through-test.md  ci-timeout-tests-enforce-the-range-you-set.md  claude-agent-sdk-is-now-a-core-dependency-of-attune-ai.md  claude-code-plugin-is-platform-specific.md  claude-code-plugins-expect-plugin-json-inside-claude-plugin.md  claude-plugin-install-is-marketplace-only.md  clusterfuzzlite-no-deps-misses-transitive-imports.md  codeql-alerts-dismissible-in-bulk-via-gh-api.md  codeql-js-stored-xss-flags-jsx-even-though-react-auto-escapes.md  codeql-py-clear-text-logging-sensitive-data-traces-data-flow.md  commands-are-not-namespaced-in-plugins-skills-are.md  config-py-alongside-config-creates-a-mypy-duplicate-module.md  costreport-is-a-dataclass-not-a-dict.md  custom-mcp-stdio-loop-fails-claude-code-handshake.md  datetime-utcnow-datetime-nowtimezone-utc-cascades-through-the.md  dead-code-modules-with-full-test-suites-look-alive.md  deep-review-false-positives-verify-before-acting.md  dependency-lower-bounds-trigger-scorecard-vulnerability-alerts.md  dispatch-tables-hold-direct-function-references-mocks-must.md  dist-can-contain-stale-artifacts-after-version-bumps.md  dont-append-z-to-timezone-aware-isoformat.md  duplicate-plugins-cause-conflicting-skill-triggers.md  enforce-admins-false-defeats-code-review-scorecard-check.md  enforce-admins-required-reviews-blocks-solo-dev-merges.md  exploration-agents-fabricate-names-verify-against-source.md  (+107 more)
src/attune_help/templates/faqs/: adding-dns-resolution-to-validate-webhook-url-breaks-tests-that.md  adding-logger-before-eager-imports-triggers-e402-in-init-py.md  anthropics-built-in-prompt-caching-supersedes-custom-caching.md  any-unstaged-file-triggers-pre-commit-stash-conflicts-with-auto.md  attune-skill-names-must-not-collide-with-claude-code-built-in.md  b904-raise-x-from-e-is-not-auto-fixable-by-ruff.md  background-processes-from-previous-sessions-persist-across.md  bandit-b108-blocks-hardcoded-tmp-paths.md  baseworkflow-now-provides-self-logger.md  baseworkflow-uses-class-attributes-not-constructor-params.md  bg-var-primary-bg-opacity-10-is-invisible-in-dark-mode.md  ci-timeout-tests-enforce-the-range-you-set.md  (+132 more)
tests/: README.md  conftest.py  test_adapter_rag.py  test_authoring_shims.py  test_backend_session_storage.py  test_claude_hooks_behavior.py  test_claude_hooks_drift.py  test_cli.py  test_cross_links_cache.py  test_discovery.py  test_engine.py  test_integration.py  test_manifest.py  test_mcp_handlers.py  test_mcp_server.py  test_plugin_config.py  test_plugin_references.py  test_preamble.py  test_progression.py  test_staleness.py  test_storage.py  test_storage_protocol.py  test_summaries_by_path.py  test_symbols.py  test_template_prefixes.py  test_templates.py  test_transformers.py  test_zero_dep_install.py
(+322 files in other folders)
