[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "attune-help"
version = "0.4.0"
description = "Lightweight help runtime with progressive depth and audience adaptation."
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "Patrick Roebuck", email = "admin@smartaimemory.com"}
]
keywords = ["help", "documentation", "progressive-depth", "templates"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Documentation",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "python-frontmatter>=1.0.0",
]

[project.optional-dependencies]
rich = ["rich>=13.0.0"]
plugin = ["mcp>=0.9.0"]

[project.scripts]
attune-help-mcp = "attune_help.mcp.server:main"

[project.urls]
Homepage = "https://github.com/Smart-AI-Memory/attune-ai"
Repository = "https://github.com/Smart-AI-Memory/attune-ai"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
attune_help = ["templates/**/*.md", "templates/**/*.json", "demos/**/*.md"]
