[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "attune-help"
version = "0.11.1"
description = "Lightweight help runtime with progressive depth and audience adaptation."
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "Patrick Roebuck", email = "admin@smartaimemory.com"}
]
keywords = ["help", "documentation", "progressive-depth", "templates"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Documentation",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "python-frontmatter>=1.0.0",
]

[project.optional-dependencies]
rich = ["rich>=13.0.0"]
plugin = ["mcp>=0.9.0"]
# Transitional: manifest/staleness/freshness moved to attune-author in
# 0.11.0. ``attune_help.manifest``/``staleness``/``freshness`` are
# deprecated shims that re-export from attune-author. Install with
# ``pip install attune-help[authoring]`` to keep the shims working.
# Restored tech.md ADR-002 (zero required deps) on 2026-05-08.
# Sunset target: 2026-07-07 — drop the shims and this extra entirely.
authoring = [
    "attune-author>=0.7.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4.0",
    "pre-commit>=3.5",
    "mcp>=0.9.0",
]

[project.scripts]
attune-help = "attune_help.cli:main"
attune-help-mcp = "attune_help.mcp.server:main"

[project.urls]
Homepage = "https://github.com/Smart-AI-Memory/attune-help"
Repository = "https://github.com/Smart-AI-Memory/attune-help"
Changelog = "https://github.com/Smart-AI-Memory/attune-help/blob/main/CHANGELOG.md"
Issues = "https://github.com/Smart-AI-Memory/attune-help/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
attune_help = ["templates/**/*.md", "templates/**/*.json", "demos/**/*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -m 'not live'"
markers = [
    "slow: tests that create real venvs or otherwise take >1s",
    "live: opt-in tests that hit a real LLM API. Skipped by default; require ANTHROPIC_API_KEY and any test-specific env flags.",
]

[tool.coverage.run]
source = ["src/attune_help"]
branch = true
omit = ["*/tests/*", "*/conftest.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 81
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
